--- a/include/style.css
+++ b/include/style.css
@@ -18,10 +18,55 @@
 html {
   font-size: 62.5%;
 }
+@media (max-width: 2560px) {
+  html {
+    font-size: 62.5%;
+  }
+}
+@media (max-width: 1900px) {
+  html {
+    font-size: 62.5%;
+  }
+
+  .righ-content-course {
+    height: 68rem;
+  }
+}
 
 @media (max-width: 768px) {
   html {
     font-size: 55%;
+  }
+  .main-content-course {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .main-content-course h4 {
+    text-align: center;
+  }
+  .sixth-page-parent {
+    display: flex;
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  .left-content-sixthpage {
+    align-self: center;
+  }
+  .righ-content-course {
+    height: fit-content;
+    margin: 0px !important;
+    width: 74% !important;
+  }
+  .left-content-course p {
+    text-align: center !important;
+  }
+  .left-content-course {
+    margin: 0 !important;
+  }
+  .button-withdiscount .course-price {
+    margin-left: 15rem !important;
   }
 }
 
@@ -29,10 +74,71 @@ html {
   html {
     font-size: 50%;
   }
+  .main-content-course {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .main-content-course h4 {
+    text-align: center;
+  }
+  .sixth-page-parent {
+    display: flex;
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  .left-content-sixthpage {
+    align-self: center;
+  }
+  .righ-content-course {
+    height: fit-content;
+    margin: 0px !important;
+    width: 74% !important;
+  }
+  .left-content-course p {
+    text-align: center !important;
+  }
+  .left-content-course {
+    margin: 0 !important;
+  }
+  .button-withdiscount .course-price {
+    margin-left: 15rem !important;
+  }
 }
 @media (max-width: 450px) {
   html {
     font-size: 35%;
+  }
+  .main-content-course {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .main-content-course h4 {
+    text-align: center;
+  }
+  .sixth-page-parent {
+    display: flex;
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  .left-content-sixthpage {
+    align-self: center;
+  }
+  .righ-content-course {
+    height: fit-content;
+    margin: 0px !important;
+  }
+  .left-content-course p {
+    text-align: center !important;
+  }
+  .left-content-course {
+    margin: 0 !important;
+  }
+  .button-withdiscount .course-price {
+    margin-left: 15rem !important;
   }
 }
 
@@ -40,10 +146,65 @@ html {
   html {
     font-size: 30%;
   }
+  .main-content-course {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .main-content-course h4 {
+    text-align: center;
+  }
+  .sixth-page-parent {
+    display: flex;
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  .left-content-sixthpage {
+    align-self: center;
+  }
+  .righ-content-course {
+    height: fit-content;
+    margin: 0px !important;
+  }
+  .left-content-course p {
+    text-align: center !important;
+  }
+  .left-content-course {
+    margin: 0 !important;
+  }
+  .button-withdiscount .course-price {
+    margin-left: 15rem !important;
+  }
 }
-@media (max-width: 340px) {
+@media (max-width: 330px) {
   html {
     font-size: 25%;
+  }
+  .main-content-course {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .main-content-course h4 {
+    text-align: center;
+  }
+
+  .sixth-page-parent {
+    display: flex;
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  .left-content-sixthpage {
+    align-self: center;
+  }
+  .righ-content-course {
+    height: fit-content;
+  }
+  .button-withdiscount .course-price {
+    margin-left: 15rem !important;
   }
 }
 
@@ -74,7 +235,9 @@ html {
   z-index: 100;
 }
 
-.fixed-menu p {
+.fixed-menu a {
+  text-decoration: none;
+  color: #ffffff;
   padding: 0 3rem;
   cursor: pointer;
   font-weight: bold;
@@ -168,12 +331,6 @@ html {
   align-items: center;
 }
 
-@media (max-width: 450px) {
-  .second-Page .course-specs .specs-left {
-    margin-left: 3rem;
-  }
-}
-
 .second-Page .course-specs .specs-left p {
   font-family: "Monument Extended";
   padding: 3.5rem 7rem 3.5rem 0;
@@ -222,7 +379,8 @@ html {
   font-family: Gilroy;
   font-size: 3.2rem;
   line-height: 4.5rem;
-
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   margin: 0 auto;
   color: #1e1e21;
   text-align: center;
@@ -302,8 +460,7 @@ html {
   align-items: flex-start;
   padding: 2rem 2rem 3.2rem;
   gap: 2.4rem;
-  max-width: 45.8rem;
-  max-height: 66.5rem;
+  width: 45.8rem;
   text-align: left;
 
   background: #ffffff;
@@ -580,14 +737,13 @@ html {
 .righ-content-sixthpage img {
   width: 40rem;
   height: 40rem;
-  margin-left: 5.6rem;
 }
 
 .seventh-Page {
   background-image: url(../images/third\ background.png);
   background-size: cover;
   padding-top: 12.4rem;
-  padding-bottom: 10rem;
+  padding-bottom: 15rem;
 }
 
 .seventh-Page h1 {
