--- a/include/style.css
+++ b/include/style.css
@@ -86,6 +86,14 @@ html {
   .main-ellipse P {
     max-width: 42.5rem !important;
   }
+  .fixed-menu {
+    width: 98% !important;
+    padding: 2rem 3rem !important;
+  }
+  
+  .fixed-menu a{
+    padding: 3% !important;
+  }
 }
 
 @media (max-width: 550px) {
@@ -134,6 +142,14 @@ html {
   .main-ellipse P {
     max-width: 42.5rem !important;
   }
+  .fixed-menu {
+    width: 98% !important;
+    padding: 2rem 3rem !important;
+  }
+  
+  .fixed-menu a{
+    padding: 1.5rem !important;
+  }
 }
 @media (max-width: 450px) {
   html {
@@ -180,6 +196,70 @@ html {
   .main-ellipse P {
     max-width: 42.5rem !important;
   }
+  .fixed-menu {
+    width: 98% !important;
+    padding: 2rem 3rem !important;
+  }
+  
+  .fixed-menu a{
+    padding: 2.3% !important;
+  } 
+}
+
+@media (max-width: 400px) {
+  html {
+    font-size: 35%;
+  }
+  .main-content-course {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 0px !important;
+  }
+  .main-content-course h4 {
+    text-align: left;
+  }
+  .sixth-page-parent {
+    margin-top: 1rem !important;
+    display: flex;
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  .left-content-sixthpage {
+    align-self: center;
+  }
+  .righ-content-course {
+    height: fit-content;
+    margin: 0px !important;
+  }
+  .left-content-course p {
+    text-align: left !important;
+  }
+  .left-content-course {
+    margin: 0 !important;
+  }
+  .button-withdiscount .course-price {
+    margin-left: 12rem !important;
+  }
+  .main-ellipse {
+    grid-template-columns: repeat(1, 1fr) !important;
+  }
+  .row-ellipse {
+    max-width: 47.5rem !important;
+  }
+  .main-ellipse P {
+    max-width: 42.5rem !important;
+  }
+  .fixed-menu {
+    width: 98% !important;
+    padding: 2rem 3rem !important;
+  }
+  
+  .fixed-menu a{
+    padding: 1.7% !important;
+  }
+ 
 }
 
 @media (max-width: 380px) {
@@ -221,6 +301,16 @@ html {
   .main-ellipse {
     grid-template-columns: repeat(1, 1fr) !important;
   }
+   .fixed-menu {
+    width: 98% !important;
+    padding: 2rem 3rem !important;
+  }
+  
+  .fixed-menu a{
+    padding: 2.3% !important;
+  }
+
+  
 }
 @media (max-width: 330px) {
   html {
@@ -261,6 +351,20 @@ html {
   }
   .main-ellipse P {
     max-width: 42.5rem !important;
+  }
+  /* .fixed-menu {
+    width: 79rem !important;
+    padding: 2rem 3rem !important;
+  }
+  .fixed-menu a{
+    padding: 2rem !important;
+  } */
+  .fixed-menu {
+    width: 89%rem !important;
+    padding: 2rem 3rem !important;
+  }
+  .fixed-menu a{
+    padding: 2.8% !important;
   }
 }
 
